[package]
name = "rust-peal"
version = "0.1.0"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simplelog = "0.7.4"
structopt = "0.3.5"
anyhow = "1.0.26"
smallbitvec = "2.5"
serde = { version = "1.0", features=["rc", "derive"]}
serde_json = "1.0.42"
rand = "0.7.3"
rand_chacha = "0.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "permutation"
harness = false