[package]
name = "rust-peal"
version = "0.1.0"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simplelog = "0.9,0"
structopt = "0.3.21"
anyhow = "1.0.37"
smallbitvec = "2.5"
serde = { version = "1.0", features=["rc", "derive"]}
serde_json = "1.0.61"
rand = "0.8.0"
rand_chacha = "0.3.0"
indexmap = "1.6.1"
itertools = "0.10.0"
twox-hash = "1.6.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "permutation"
harness = false