[package]
name = "rust-peal"
version = "0.1.0"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"
structopt = "0.3.21"
anyhow = "1.0.37"
smallbitvec = "2.5"
serde = { version = "1.0", features=["rc", "derive"]}
serde_json = "1.0.61"
rand = "0.8.0"
rand_chacha = "0.3.0"
indexmap = {features=["serde"], version = "1.6.1"}
itertools = "0.10.0"
twox-hash = "1.6.0"
bitflags = "1.2"
lazy_static = "1.4"
disjoint-sets = {features=["serde"], version = "0.4.2"}

[dev-dependencies]
criterion = "0.3"
test-env-log = { version = "0.2", default-features = false, features=["trace"] }
[[bench]]
name = "permutation"
harness = false

[profile.release]
debug = 1