[package]
name = "rust-vole"
version = "0.1.1"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tracing-appender = "0.1"
structopt = "0.3.21"
anyhow = "1.0.39"
smallbitvec = "2.5"
serde = { version = "1.0.124", features=["rc", "derive"]}
serde_json = "1.0.64"
rand = "0.8.3"
rand_chacha = "0.3.0"
indexmap = {features=["serde"], version = "1.6.2"}
itertools = "0.10.0"
seahash = "4.1.0"
bitflags = "1.2"
lazy_static = "1.4"
cpu-time="1.0.0"

[dev-dependencies]
criterion = "0.3.4"
test-env-log = { version = "0.2.5", default-features = false, features=["trace"] }

[profile.release]
debug = true
lto = "thin"
#opt-level = 1