[package]
name = "vole"
version = "0.1.1"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
edition = "2018"
license = "MPL-2.0"
description = "A library for solving search problems in permutation groups"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"
tracing-core = "0.1.18"
structopt = "0.3"
anyhow = "1.0.42"
smallbitvec = "2.5.0"
serde = { version = "1.0.127", features=["rc", "derive"]}
serde_json = "1.0.66"
rand = "0.8.4"
rand_chacha = "0.3.1"
indexmap = {features=["serde"], version = "1.7.0"}
itertools = "0.10.1"
seahash = "4.1.0"
bitflags = "1.2.1"
lazy_static = "1.4.0"
cpu-time="1.0.0"
once_cell = "1.8.0"

[dev-dependencies]
criterion = "0.3.5"
test-log = { version = "0.2.5", default-features = false, features=["trace"] }

[profile.release]
debug = true
lto = "thin"
#opt-level = 1