[package]
name = "vole"
version = "0.1.0"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perm = {version = "0.1.0", path = "../perm" }
partitionstack = {version = "0.1.0", path = "../partitionstack" }
digraph = { version = "0.1.0", path = "../digraph" }
trace = {version= "0.1.0", path = "../trace" }
log = "0.4.8"
simplelog = "0.7.4"
structopt = "0.3.5"
serde_json = "1.0.42"
serde = "1.0.103"
serde_derive = "1.0.103"
anyhow = "1.0.26"
